--- a/release/sil/sil_hebrew_legacy/source/welcome/welcome.htm
+++ b/release/sil/sil_hebrew_legacy/source/welcome/welcome.htm
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
     <title>Hebrew Legacy (SIL) keyboard layout</title>
-    <style type='text/css'>
-        html, body { padding: 0; margin: 4px 4px 0 4px; font-family: sans-serif; font-size: 100%}
-        div, p, li { margin-bottom: 8px }
+    <style type="text/css">
+        p { font: 10pt Tahoma; }
+        h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+        h2 { font: bold 12pt Tahoma; color: #4444cc; }
+            div, p, li { margin-bottom: 8px }
         table.inputSequences {
           border: 1px solid #1C6EA4;
           background-color: #FFFFFF;
@@ -95,16 +97,16 @@
 <h2>Keyboard Layout</h2>
 
 <h3>Normal</h3>
-<p class="centered"><img src="LayoutU_.png" alt="Hebrew keyboard layout: Unshifted"></p>
+<p><img src="LayoutU_.png" alt="Hebrew keyboard layout: Unshifted"></p>
 
 <h3>Shift</h3>
-<p class="centered"><img src="LayoutU_S.png" alt="Hebrew keyboard layout: Shift"></p>
+<p><img src="LayoutU_S.png" alt="Hebrew keyboard layout: Shift"></p>
 
 <h3>Right Alt</h3>
-<p class="centered"><img src="LayoutU_RA.png" alt="Hebrew keyboard layout: RAlt"></p>
+<p><img src="LayoutU_RA.png" alt="Hebrew keyboard layout: RAlt"></p>
 
 <h3>Shift + Right Alt</h3>
-<p class="centered"><img src="LayoutU_SRA.png" alt="Hebrew keyboard layout: Shift + RAlt"></p>
+<p><img src="LayoutU_SRA.png" alt="Hebrew keyboard layout: Shift + RAlt"></p>
 
 <div>
 <h2>Input Sequences</h2>
