--- a/release/p/pt_international/source/welcome/welcome.htm
+++ b/release/p/pt_international/source/welcome/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Start Using PT International</title>
+  <title>Start Using Portuguese (International)</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<h1>Start Using PT International</h1>
+<h1>Start Using Portuguese (International)</h1>
 
 <p>
 This keyboard is designed for the users familiar with the US keyboard who want to type in Portuguese. 
@@ -23,6 +23,10 @@ Unlike the traditional Portuguese layout, it doesn't use dead keys for accents.
 	<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
 	<h3>Shift</h3>
 	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
+	<h3>Right ALT (unshifted)</h3>
+	<p><a href="LayoutU_RA.png"><img class="keyboard" src="LayoutU_RA.png" alt="Right ALT (unshifted) state" /></a></p>
+	<h3>Shift Right ALT</h3>
+	<p><a href="LayoutU_SRA.png"><img class="keyboard" src="LayoutU_SRA.png" alt="Shift Right ALT state" /></a></p>
 
 <p>© 2024 SIL Global</p>
 
