--- a/release/packages/gff_gurage_and_amharic/source/gff_amharic_welcome.htm
+++ b/release/packages/gff_gurage_and_amharic/source/gff_amharic_welcome.htm
@@ -349,7 +349,7 @@ hitting the punctuation key two or more times until it appears.</p>
 
 <h2>License</h2>
 
-<p>This keyboard is copyright © Geʾez Frontier Foundation, 1997-2023. It is distributed under the MIT free software license:</p>
+<p>This keyboard is copyright © Geʾez Frontier Foundation. It is distributed under the MIT free software license:</p>
 
 <div style="margin-left: 1em;">
   <table>
