--- a/release/t/taigi_viet_telex/source/welcome.htm
+++ b/release/t/taigi_viet_telex/source/welcome.htm
@@ -24,12 +24,12 @@
 </p>
 <p>
    佮數字音調表示方法ê相應規則 rules: </p>
-    <p> 2=s, 3=f, 5=r, 7=j, 8=j, 9=w, ~=x</p>
+    <p> 2=r, 3=s, 5=f, 7=j, 8=j, 9=w, ~=x</p>
   <p> 例 examples: </p>
-    <p> as > á, af= > à, ar > â, aj > ā, ahj > a̍h, aw > ă, ax > ã</p>
-  <p>  shortcut: </p>
-    <p> aa > â, ee > ê, uu > û, ii > î, x > chh, d > ch</p>
-   <p> 特別ê字母specific letters: </p>
+    <p> ar > á, as > à, af > â, aj > ā, ahj > a̍h, aw > ă, ax > ã</p>
+  <p>  撇步 shortcut: </p>
+    <p> aa > â, ee > ê, uu > û, ii > î, x > chh, d > ch, y > ng, f > ph, pp > ph, kk > kh, tt > th, en > ian, em > iam </p>
+   <p> 特別ê字母 specific letters: </p>
     <p> nn > ⁿ , oo > o͘, q > o͘, w > ṳ, v > o̤</p>
   <p>  拍兩次字母，取消音調，產生原本ê字母 doubletaping leads to generate original letters: </p>
     <p> 例example: fijj > fij,  kannn > kann, laww > law, beee > bee
